Update for Summer to make effective area plots

--- a/gather.ipynb
+++ b/gather.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +21,12 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "from matplotlib import pyplot as plt\n",
-    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "try: from tqdm import tqdm\n",
+    "except: tqdm = lambda x: x\n",
     "\n",
     "import icecube\n",
-    "from icecube import dataclasses, dataio, icetray"
+    "from icecube import dataclasses, dataio, icetray, simclasses"
    ]
   },
   {
@@ -37,15 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "oscnext_dir = \"/data/ana/LE/oscNext/pass2/genie/level7_flercnn/\"\n",
     "run = \"140000\"\n",
+    "output_filename = f\"oscnext_{run}.npy\"\n",
     "\n",
     "# Let's just grab the first 100 files.\n",
-    "files = sorted(glob.glob(os.path.join(oscnext_dir, run, \"*\")))[:100]"
+    "oscnext_files = sorted(glob.glob(os.path.join(oscnext_dir, run, \"*\")))[:100]"
    ]
   },
   {
@@ -58,32 +61,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_oneweight(frame):\n",
+    "def get_oneweight(frame, nfiles):\n",
     "    mcwd = frame['I3MCWeightDict']\n",
     "    \n",
     "    # These are newer NuGen files if this is found. It directly includes\n",
     "    # the fraction of nu and nubar in the OneWeightPerType value, so we \n",
     "    # don't need to guess what the right values are.\n",
-    "    if 'OneWeightPerType' in mcwd:\n",
-    "        oneweight_pertype = mcwd['OneWeightPerType']\n",
+    "    if \"OneWeightPerType\" in mcwd:\n",
+    "        return mcwd['OneWeightPerType'] / mcwd['NEvents'] / nfiles\n",
+    "        \n",
+    "    # GENIE-reader files only include either nu or nubar. No guessing here.\n",
+    "    # Note that the \"nevents\" comes from a different place, though.\n",
+    "    if 'I3GenieInfo' in frame:\n",
+    "        return mcwd['OneWeight'] / frame['I3GenieInfo'].n_flux_events / nfiles\n",
     "    \n",
-    "    # No luck. We'll have to guess at some factors, but that shouldn't be\n",
-    "    # too difficult.\n",
+    "    # No luck. We'll have to guess at the nu/nubar factors, but that shouldn't be\n",
+    "    # too difficult. They've been constant for years. For GENIE-icetray, that's\n",
+    "    # 70/30\n",
+    "    elif any('genie' in key.lower() for key in frame.keys()):\n",
+    "        nu = dataclasses.get_most_energetic_neutrino(frame['I3MCTree'])\n",
+    "        if nu.pdg_encoding > 0: nunubar = 0.7  # Generated with 70% nu\n",
+    "        else:                   nunubar = 0.3  # and 30% nubar\n",
+    "        return mcwd['OneWeight'] / mcwd['NEvents'] / nunubar / nfiles\n",
+    "\n",
+    "    # And with older NuGen, this is 50/50\n",
     "    else:\n",
-    "        oneweight_pertype = mcwd['OneWeight']\n",
-    "\n",
-    "        if 'GENIEResultsDict' in frame.keys():\n",
-    "            nu = dataclasses.get_most_energetic_neutrino(frame['I3MCTree'])\n",
-    "            if nu.pdg_encoding > 0: oneweight_pertype /= 0.7  # Generated with 70% nu\n",
-    "            else:                   oneweight_pertype /= 0.3  # and 30% nubar\n",
-    "        else:\n",
-    "            oneweight_pertype /= 0.5  # Old NuGen is generated with equal nu and nubar\n",
-    "\n",
-    "    return oneweight_pertype / mcwd['NEvents'] / len(files)"
+    "        nunubar = 0.5\n",
+    "        return mcwd['OneWeight'] / mcwd['NEvents'] / nunubar / nfiles"
    ]
   },
   {
@@ -105,54 +113,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec5ed5c2f1b949b9b3d4586fb42820ff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ow, energy, dec = [], [], []\n",
-    "\n",
-    "# Loop over the files\n",
-    "for f in tqdm(files):\n",
-    "    i3file = dataio.I3File(f)\n",
+    "def read_files(files, nfiles=None):\n",
+    "    ow, energy, zen, dec = [], [], [], []\n",
     "    \n",
-    "    # And loop through frames for this file\n",
-    "    while i3file.more():\n",
-    "        frame = i3file.pop_frame()\n",
-    "        if frame.Stop != icetray.I3Frame.Physics: continue\n",
-    "        \n",
-    "        # Get the relevant information from this frame\n",
-    "        nu = dataclasses.get_most_energetic_neutrino(frame['I3MCTree'])\n",
-    "        ow.append(get_oneweight(frame))\n",
-    "        energy.append(nu.energy)\n",
-    "        dec.append(np.pi/2 - nu.dir.zenith) # Calculate zenith to declination\n",
+    "    if nfiles is None: nfiles = len(files)\n",
     "\n",
-    "# Convert from basic python lists to a numpy structured array\n",
-    "recarr = np.array(list(zip(energy, dec, ow)), \n",
-    "                  dtype = [('trueE', float), ('trueDec', float), ('ow', np.float64)])"
+    "    # Loop over the files\n",
+    "    for f in tqdm(files):\n",
+    "        i3file = dataio.I3File(f)\n",
+    "\n",
+    "        # And loop through frames for this file\n",
+    "        while i3file.more():\n",
+    "            frame = i3file.pop_frame()\n",
+    "            if frame.Stop != icetray.I3Frame.Physics: continue\n",
+    "\n",
+    "            # Get the relevant information from this frame\n",
+    "            nu = dataclasses.get_most_energetic_neutrino(frame['I3MCTree'])\n",
+    "            ow.append(get_oneweight(frame, nfiles))\n",
+    "            energy.append(nu.energy)\n",
+    "            zen.append(nu.dir.zenith)\n",
+    "            dec.append(np.pi/2 - nu.dir.zenith) # Calculate zenith to declination\n",
+    "\n",
+    "    # Convert from basic python lists to a numpy structured array\n",
+    "    return np.array(list(zip(energy, zen, dec, ow)), \n",
+    "                    dtype = [('trueE', float), \n",
+    "                             ('trueZen', float), \n",
+    "                             ('trueDec', float), \n",
+    "                             ('ow', np.float64)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oscnext_recarr = read_files(oscnext_files)"
    ]
   },
   {
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,9 +178,156 @@
     }
    ],
    "source": [
-    "print(f\"Number of events found: {recarr.shape}\")\n",
-    "np.save(f\"oscnext_{run}.npy\", recarr)"
+    "print(f\"Number of events found: {oscnext_recarr.shape}\")\n",
+    "np.save(output_filename, oscnext_recarr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## We can do this for upgrade files using the same code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trigger-level Upgrade NuMu files\n",
+    "upgrade_dir = \"/data/sim/IceCubeUpgrade/genie/step4/\"\n",
+    "run = \"140028\"\n",
+    "output_filename = f\"upgrade_trigger_{run}.npy\"\n",
+    "files = sorted(glob.glob(os.path.join(upgrade_dir, run, \"upgrade*\")))[:50]\n",
+    "dataset = read_files(files)\n",
+    "np.save(output_filename, dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49a54ffe70724a6983ff06c363081edb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Trigger-level Upgrade NuMuBar files\n",
+    "upgrade_dir = \"/data/sim/IceCubeUpgrade/genie/step4/\"\n",
+    "run = \"140128\"\n",
+    "output_filename = f\"upgrade_trigger_{run}.npy\"\n",
+    "files = sorted(glob.glob(os.path.join(upgrade_dir, run, \"upgrade*\")))[:50]\n",
+    "dataset = read_files(files)\n",
+    "np.save(output_filename, dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Or for final-level upgrade analysis files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "27ce9942b1b84f0abb8ed5d227afb6f4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# QUESO Upgrade NuMu files\n",
+    "upgrade_dir = \"/data/sim/IceCubeUpgrade/genie/level4_queso/\"\n",
+    "run = \"140028\"\n",
+    "files = sorted(glob.glob(os.path.join(upgrade_dir, run, \"*\")))[:50]\n",
+    "output_filename = f\"queso_{run}.npy\"\n",
+    "dataset = read_files(files)\n",
+    "np.save(output_filename, dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fe49c964178b4b7b9d75d98edea47ca1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/50 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# QUESO Upgrade NuMuBar files\n",
+    "upgrade_dir = \"/data/sim/IceCubeUpgrade/genie/level4_queso/\"\n",
+    "run = \"140128\"\n",
+    "files = sorted(glob.glob(os.path.join(upgrade_dir, run, \"*\")))[:50]\n",
+    "output_filename = f\"queso_{run}.npy\"\n",
+    "dataset = read_files(files)\n",
+    "np.save(output_filename, dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -197,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
