--- a/gather.ipynb
+++ b/gather.ipynb
@@ -138,7 +138,7 @@
     "            ow.append(get_oneweight(frame, nfiles))\n",
     "            energy.append(nu.energy)\n",
     "            zen.append(nu.dir.zenith)\n",
-    "            dec.append(np.pi/2 - nu.dir.zenith) # Calculate zenith to declination\n",
+    "            dec.append(nu.dir.zenith - np.pi/2) # Calculate zenith to declination\n",
     "\n",
     "    # Convert from basic python lists to a numpy structured array\n",
     "    return np.array(list(zip(energy, zen, dec, ow)), \n",
